--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 
 <head>
    <meta charset="UTF-8">
-   <title>Your window title goes here</title>
+   <title>[Your window title goes here]</title>
    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
 <body>
-   <h1>Main window</h1>
+   <h1>[Main window]</h1>
 
    <script src="index.js"></script>
 </body>
